--- a/public/css/navbar2.css
+++ b/public/css/navbar2.css
@@ -89,3 +89,9 @@
 	//box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2)
 
 }
+#nav .vbox {
+   border:1px solid #030;
+   font-size:0.7em;
+   width:15em;
+   padding:3px;
+}
