--- a/public/css/navbar2.css
+++ b/public/css/navbar2.css
@@ -92,7 +92,7 @@
 #nav .vbox {
    #border:1px solid #666;
    font-size:0.8em;
-   color: #ccc;
+   color: #333;
    padding:3px;
   # margin-left:1em;
   # margin-right:1em;
