--- a/public/css/news3.css
+++ b/public/css/news3.css
@@ -1,7 +1,8 @@
 body, .normal {padding:6px;
 	font-family: "New Times Roman",Times,serif;
 	font-size: 1em; color: black;
-	max-width:1200px;
+	max-width:1000px;
+	width:100vw;
 	padding:5px;
 	color:black;
 	font-style: normal;
