--- a/public/css/news3.css
+++ b/public/css/news3.css
@@ -74,14 +74,14 @@ td {vertical-align: top;}
 .grayback {background:#CCC;}
 .tright {text-align:right;}
 
-.quoted {
+blockquote, .quoted {
     display:block;
     border-left:2px solid #030;
     padding-left:1em;
     font-style:normal;
     color:#363;
     }
-.quoted p {
+blockquote p, .quoted p {
     padding-left:1em;
 }
 .instr {font-style:italic;}
