--- a/public/css/news3.css
+++ b/public/css/news3.css
@@ -283,14 +283,16 @@ div.thumb {
 .assets .title {}
 
 table#calendar  {
-	border:1px solid black; border-collapse:collapse;
-	margin-left:2em;
-	width:600px;
+	border:1px solid #030; border-collapse:collapse;
+	margin-left:2em; margin-right:2em;
+	
 }
-table#calendar  {border:1px solid #030;}
+
 table#calendar  td {padding:3px;font-size:0.9em;}
 table#calendar tr.first {border-top:1px solid #030;}
-table#calendar td.date {width:16em;}
+table#calendar td.date {width:20%}
+table#calendar td.event {width:40%}
+table#calendar td.location {width:40%}
 
 
 table td.gtop {border-top:1px solid gray;}
