lots of tweaks, especailly in the profile updates

--- a/public/css/news3.css
+++ b/public/css/news3.css
@@ -104,7 +104,7 @@ button:hover {
 
 
 .input, input {background-color:#eee; }
-input.required {background-color:#ffffa0;}
+.required {background-color:#ffffa0;}
 input:invalid {color:red;}
 input:valid {color:#000;}
 
