--- a/public/css/news3.css
+++ b/public/css/news3.css
@@ -227,6 +227,7 @@ div.thumb {
     float:left;
     border:1px solid gray;
     padding-left:5px;padding-right:5px;
+    background:#FFF;
 }
 
 .thumb .caption {
