--- a/public/css/news4.css
+++ b/public/css/news4.css
@@ -168,11 +168,6 @@ div.toon {
 	text-align:center;
 }
 
-.story_comment_box {
-    border:1px solid green;
-    margin-top:1em;
-    padding:4px;
-}
 
 .comment {font-family: arial; font-style: italic; font-size: 0.9em; color: #063; margin-left:1em; margin-right:1em;}
 .toon .comment {text-align:center;}
@@ -330,60 +325,66 @@ div.article {
 
 	margin-left:1em;
 	border-top:1px solid #360;
-    max-width:1000px;
+    max-width:760px;
 	}
 
 .article .head {
-	margin-left:0;margin-bottom:1em;
+	margin-left:0;
+	margin-bottom:1em;
 }
 
-.article .type {
-	
-	font-style:italic;
+.article .type{
+	font-style:normal;
 	text-decoration: underline;
+	margin-bottom:3px;
 	}
 
 .article .headline {
 	font: bold 1em arial,serif;
+	margin-top:3px;
+	margin-left:1em;
 }
 
-.contributor {
-    display:block;
+article .contributor {
 	text-align:right;
 	font-style:italic;
 	font-size:0.8em;
 	}
 
-.article   .date {
+.article .date {
 	font-weight:normal;
 	font-style:italic;
 	padding-left:1em;
 
 	}
 
-.content {
+.article .content {
 	font-style:normal;
 	margin-right:2em;
-
+	max-width:720px;
+	padding-left:3em;
 
 	}
 
-.article .body {
-	margin-left:1em;
-	float:left;
-	max-width:720px;
+.article  .attribution {
 
 }
+.article .story_comment_box {
+    border:1px solid green;
+    margin-top:1em;
+    padding:4px;
+}
+
 /* amd news styles */
 
-    .article.body.p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 13.3px Arial; -webkit-text-stroke: #000000}
-    .article.body.li.li1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 13.3px Arial; -webkit-text-stroke: #000000}
-    .article.body.span.s1 {font-kerning: none}
-    .article.body.span.s2 {text-decoration: underline ; font-kerning: none; color: #0b4cb4; -webkit-text-stroke: 0px #0b4cb4}
-    .article.body.span.s3 {color: #0b4cb4}
-    .article.body.span.s4 {text-decoration: underline ; font-kerning: none; -webkit-text-stroke: 0px #0b4cb4}
-    .article.body.span.s5 {font: 7.4px Arial; font-kerning: none}
-    .article.body.ul.ul1 {list-style-type: disc}
+    .article.content.p.p1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 13.3px Arial; -webkit-text-stroke: #000000}
+    .article.content.li.li1 {margin: 0.0px 0.0px 0.0px 0.0px; font: 13.3px Arial; -webkit-text-stroke: #000000}
+    .article.content.span.s1 {font-kerning: none}
+    .article.content.span.s2 {text-decoration: underline ; font-kerning: none; color: #0b4cb4; -webkit-text-stroke: 0px #0b4cb4}
+    .article.content.span.s3 {color: #0b4cb4}
+    .article.content.span.s4 {text-decoration: underline ; font-kerning: none; -webkit-text-stroke: 0px #0b4cb4}
+    .article.content.span.s5 {font: 7.4px Arial; font-kerning: none}
+    .article.content.ul.ul1 {list-style-type: disc}
 /* end amd styles */
 
 .more {
