--- a/public/css/news4.css
+++ b/public/css/news4.css
@@ -1,4 +1,5 @@
-body, .normal {padding:6px;
+body  {
+	
 	font-family: "New Times Roman",Times,serif;
 	font-size: 1em; color: black;
 	max-width:1200px;
@@ -10,7 +11,14 @@ body, .normal {padding:6px;
 	margin-left:1em;
 	margin-right:1em;
 	}
-
+ .normal {
+	font-family: "New Times Roman",Times,serif;
+	font-size: 1em; 
+	color: black;
+	color:black;
+	font-style: normal;
+	font-weight: normal;
+	}
 
 p {margin-top: 1em;
 	font-style: normal; font-size: 1em;
@@ -359,7 +367,7 @@ article .contributor {
 	}
 
 .article .content, .article .body {
-	font-style:normal;
+	font-weight:normal;
 	margin-right:2em;
 	max-width:720px;
 	padding-left:3em;
@@ -367,6 +375,14 @@ article .contributor {
 
 }
 
+.article .content .subhead {
+	font-weight:bold;
+	text-decoration:underline;
+	margin-bottom:0;
+}
+.article .content .subarticle {
+	margin-left:1em;
+}
 .article  .attribution {
 
 }
