--- a/public/css/news4.css
+++ b/public/css/news4.css
@@ -6,7 +6,7 @@ body  {
 	
 	font-family: "New Times Roman",Times,serif;
 	font-size: 1em; color: black;
-	max-width:1200px;
+	max-width:1000px;
 	 width:95vw;
 	padding:5px;
 	color:black;
@@ -343,7 +343,7 @@ div.article {
 
 	margin-left:1em;
 	border-top:1px solid #360;
-    max-width:800px;
+    max-width:90vp;
 	}
 
 
@@ -360,7 +360,7 @@ div.article {
 }
 
 
-.article p.source {
+.source, .article p.source {
     text-align:right;
 	font-style:normal;
 	margin-bottom: 0px;
@@ -386,7 +386,7 @@ div.article {
 .article .content, .article .body {
 	font-weight:normal;
 	display:inline-block;
-	width:540px;
+	max-width:550px;
 	margin-left:1em;
 	/* width:100%; */
 	float:left;
@@ -401,8 +401,16 @@ div.article {
 	
 }
 .article .content .subarticle {
-	margin-left:1em;
+	margin-left:1.5em;
+	margin-right:1.5em;
 }
+
+.article .more , .more  {
+	margin-left:3em;
+	margin-top: 0.2em;
+	color:green;
+	}
+
 
 .article .ed_comment { font-family: arial; font-style: plain;
     font-size: 0.9em; color: #066;
@@ -411,21 +419,13 @@ div.article {
     }
 
 
-.article  .attribution {
 
-}
 .article .story_comment_box {
     border:1px solid green;
     margin-top:1em;
     padding:4px;
 }
 
-
-.more {
-	margin-left:3em;
-	margin-top: 0.2em;
-	color:green;
-	}
 
 
 div.apology {
