--- a/public/css/news4.css
+++ b/public/css/news4.css
@@ -433,12 +433,13 @@ div.comment_background {
  .article {
 	margin-left:1em;
 	border-top:1px solid #360;
-    max-width:900px;
+    max-width:1000px;
 }
 
  .story {
-	float:left;
-	margin-left:1em;
+	min-width:350px;
+	display:block;
+	overflow:hidden;
 }
 
  .story .content {
