--- a/public/css/calendar.css
+++ b/public/css/calendar.css
@@ -6,17 +6,19 @@ table#calendar  {
 
 }
 
-table#calendar tr td {padding:3px;}
+table#calendar tr td {padding-left:6px;}
 table#calendar tr.first {border-top:1px solid #030;}
-table#calendar td.date {text-align:left;}
+table#calendar td.date {text-align:left;width:25%;}
+table#calendar td.city {text-align:left;width:20%;}
 table#calendar td.event {text-align:left; font-weight:bold;}
 table#calendar td.location {
-	text-align:center;
-	width:50%;
+	text-align:left;
+	width:55%;
 	}
 table#calendar td.info {
-	padding-left:2em;
-	padding-right:2em;
+
 	}
 
-
+table#calendar td.info p {
+	margin-top:0;
+}
