--- a/public/css/news4.css
+++ b/public/css/news4.css
@@ -57,7 +57,7 @@ li {margin-bottom:0.5em;}
 
 .centered {text-align:center;margin-left:auto;margin-right:auto;}
 .right {text-align:right;}
-
+div.right {float:right;}
 
 .divh2 {font-family: Arial,san-serif; font-size: 2em; color: black; font-weight:bold;
 	border-top:5px solid green;
@@ -171,6 +171,10 @@ div.help {
 	padding: 1em;
 	background:#DFD;
 
+}
+div.inline {
+	display:inline-block;
+	padding:3px;
 }
 
 div.page_head {margin:auto;
