--- a/public/css/navbar2.css
+++ b/public/css/navbar2.css
@@ -7,7 +7,7 @@
     padding: 0;
     margin: 0;
     text-align:right;
-    margin-right:5em;
+    margin-right:0;
 }
 
 #nav ul li {
@@ -96,5 +96,5 @@
    padding:3px;
   # margin-left:1em;
   # margin-right:1em;
-   
+
 }
