--- a/public/css/news4.css
+++ b/public/css/news4.css
@@ -598,7 +598,7 @@ img.logo   {
 	font-size:1em;
 	margin-top:6px;
 	margin-bottom:6px;
-
-	font-weight:normal;
+	font-style:italic;
+	font-weight:bold;
 }
 
