moved teaser files to next and latest

--- a/public/css/news4.css
+++ b/public/css/news4.css
@@ -484,6 +484,7 @@ div.comment_background {
 .content .subarticle {
 	margin-left:1.5em;
 	margin-right:1.5em;
+	margin-top:0.5em;
 }
 
  .more , .more  {
