modified css for ed_comment

--- a/public/css/news4.css
+++ b/public/css/news4.css
@@ -497,10 +497,10 @@ div.comment_background {
  .ed_comment {
 
     font-size: 0.9em;
-    text-align:right;
-    margin-left:1em;
-    margin-right:1em;
-    margin-top:2px;
+    text-align:left;
+    margin-left:2em;
+    margin-right:2em;
+    margin-top:6px;
 
     }
 
